# rttsa

./: .gitignore  CMakeLists.txt  README.md  gui.py  joint_trajectory.csv  rt_sim_runner.py  sim_bridge.py
coppeliasim scene/: tray_sim.ttt
models/: ur5.xml
src/: CMakeLists.txt
src/include/rt_smoothing/: SCurvePlanner.hpp  TrajectoryTypes.hpp
src/src/: SCurvePlanner.cpp
tests/: CMakeLists.txt  arm_runner.cpp  bezier_ik_runner.cpp  jerky_runner.cpp  rt_arm_runner.cpp  scenario_runner.cpp  test_scurve_planner.cpp
